name:                christmas-tree
version:             0.1.0.0
synopsis:            Have a haskelly Christmas.
homepage:            http://duta.github.io/
author:              Bertie Wheen
maintainer:          wheen.b@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable christmas-tree
  main-is:             Main.hs
  other-extensions:    QuasiQuotes
  build-depends:       base >=4.7 && <4.8, suspend >=0.2 && <0.3, timers >=0.2 && <0.3, cond >=0.4 && <0.5, ansi-terminal >=0.6 && <0.7, raw-strings-qq >=1.0 && <1.1
  default-language:    Haskell2010